Updated styles, began work on panning and zooming map

--- a/index.html
+++ b/index.html
@@ -26,30 +26,33 @@
 
 </head>
 <body>
-    <div class="container-fluid">
-        <!-- Map/List tabs
-        –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-        <div class="row justify-content-sm-center">
-            <ul class="nav nav-tabs">
-                <li class="nav-item">
-                    <a class="nav-link active" href="#">Map View</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">List View</a>
-                </li>
-            </ul>
-        </div>
+    <!-- Navbar
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <nav class="navbar fixed-top navbar-light" style="background-color: #fff;">
+        <a class="navbar-brand" href="#">
+            <img src="img/spectrum-mark-orange.png" width="30" height="30" class="d-inline-block align-top" alt="">
+            Spectrum Global Autism Prevalence Map
+        </a>
+        <ul class="nav nav-tabs">
+            <li class="nav-item">
+                <a class="nav-link active" href="#">Map View</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">List View</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+            </li>
+        </ul>
+    </nav>
+
+    <div class="container-fluid">    
         <div class="row">
-            <div class="col-sm-4">
-                <h1>Global Autism Prevalence Map</h1>
-                <p>Lorem ipsum dolor amet meh kale chips church-key, woke cornhole gentrify slow-carb pabst crucifix helvetica roof party kitsch whatever. Keytar kickstarter cornhole beard normcore succulents hella, cold-pressed quinoa tousled. Sartorial normcore mlkshk craft beer organic tattooed af distillery copper mug occupy. Meditation health goth small batch, austin keffiyeh microdosing kale chips drinking vinegar.</p>
-            </div>
-            <div class="col-sm-8">
-                <div id="map" class=""></div>
+            <div class="col">
+                <div id="map"></div>
             </div>
         </div>
     </div>
-    <div class></div>
 
     
     
