--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- CSS libraries
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 
     <!-- Custom CSS
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -46,12 +47,23 @@
         </ul>
     </nav>
 
+    <!-- Main Container
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <div class="container-fluid">    
         <div class="row">
             <div class="col">
+                <!-- Map div
+                –––––––––––––––––––––––––––––––––––––––––––––––––– -->
                 <div id="map"></div>
             </div>
         </div>
+    </div>
+
+    <!-- Zoom buttons
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <div id="zoom-buttons" class="zoom-buttons btn-group-vertical">
+        <button type="button" id="zoom-in" class="btn btn-dark"><i class="fas fa-plus"></i></button>
+        <button type="button" id="zoom-out" class="btn btn-dark"><i class="fas fa-minus"></i></button>
     </div>
 
     
